--- a/Views/Template/Edit.cshtml
+++ b/Views/Template/Edit.cshtml
@@ -140,8 +140,8 @@
                             @for (int i = 0; i < Model.AllowedUserNames.Count; i++)
                             {
                                 <div class="d-flex align-items-center mb-2">
-                                    <input type="hidden" asp-for="AllowedUserNames[@i].UserName" value="@Model.AllowedUserNames[i].UserName" />
-                                    <input type="hidden" asp-for="AllowedUserNames[@i].Email" value="@Model.AllowedUserNames[i].Email" />
+                                    <input type="hidden" asp-for="AllowedUserNames[i].UserName" value="@Model.AllowedUserNames[i].UserName" />
+                                    <input type="hidden" asp-for="AllowedUserNames[i].Email" value="@Model.AllowedUserNames[i].Email" />
 
                                     <span class="flex-grow-1">
                                         @Model.AllowedUserNames[i].UserName (@Model.AllowedUserNames[i].Email)
